syntax = "proto3";

package hub;

service Hub {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
}

message PutRequest {
	string ClientID           = 1;
	string JournalDir         = 2;
	repeated Message Messages = 3;
}

message PutResponse {}

message GetRequest {
	string ClientID   = 1;
	string JournalDir = 2;
	uint64 Offset     = 3;
}

message GetResponse {
	repeated Message Messages = 1;
}

message Message {
	uint64 Offset   = 1;
	int64 Timestamp = 2;
	uint32 Type     = 3;
	bytes Key       = 4;
	bytes Value     = 5;
}
